bk_ida/gccida/c3/unroll_loop
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:710:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:710:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:712:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:712:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:738:4: error: expected ';' after expression
rtx v45; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:738:5: error: use of undeclared identifier 'v45'
rtx v45; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:764:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:764:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:791:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v98; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:792:4: error: expected ';' after expression
rtx v99; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:792:5: error: use of undeclared identifier 'v99'
rtx v99; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:797:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v104; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:803:4: error: expected ';' after expression
rtx v110; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:803:5: error: use of undeclared identifier 'v110'
rtx v110; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:805:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v112; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:807:6: error: use of undeclared identifier 'v114'
rtx *v114; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:811:4: error: expected ';' after expression
rtx v118; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:811:5: error: use of undeclared identifier 'v118'
rtx v118; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/unroll.c:817:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v124; // ebp 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/unroll_loop/src/obj/unroll.o] Error 1
